--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install build twine
     - name: Build package
-      run: python -m build
+      run: python setup.py stdist
     - name: Publish package
       run: |
         twine upload --repository-url https://upload.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI }} dist/*
