--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         pip install setuptools wheel
         pip install build twine
     - name: Build package
-      run: python setup.py stdist
+      run: python setup.py sdist
     - name: Publish package
       run: |
         twine upload --repository-url https://upload.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI }} dist/*
