--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
       run: python setup.py sdist
     - name: Publish package
       run: |
-        twine upload --repository-url https://upload.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI }} dist/*
+        twine upload -u __token__ -p ${{ secrets.PYPI }} dist/*
