--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,14 +25,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
-    - name: Check if dist folder exists
-      run: |
-        if [ -d dist ]; then
-          echo "Folder 'dist' exists."
-        else
-          echo "Error: Folder 'dist' does not exist."
-          exit 1
-        fi
+    - name: Create dist directory
+      run: mkdir dist
+      
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
