--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,6 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
-    - name: Create dist directory
-      run: mkdir dist
       
     - name: Install dependencies
       run: |
@@ -35,6 +33,8 @@ jobs:
         pip install build twine
     - name: Build package
       run: python setup.py sdist
+    - name: Display contents of dist directory
+      run: ls -l dist
     - name: Publish package
       run: |
         twine upload -u __token__ -p ${{ secrets.PYPI }} dist/*
