--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,4 @@ jobs:
       run: ls -l dist
     - name: Publish package
       run: |
-        twine upload -u __token__ -p ${{ secrets.PYPI }} dist/*
+        twine upload -u __token__ -p ${{ secrets.PYPI }} /dist/*
