--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
       run: python -m pip wheel .
     - name: Publish package
       run: |
-        twine upload -u __token__ -p ${{ secrets.PYPI }} spartan_scan-2*
+        twine upload -u __token__ -p ${{ secrets.PYPI }} dist spartan_scan-2*
